fix(partup): fixed "Part-up updates not rendered on tablet" #925

--- a/app/client/stylesheets/components/compositions/_pu-composition-partupdetailupdates.scss
+++ b/app/client/stylesheets/components/compositions/_pu-composition-partupdetailupdates.scss
@@ -3,6 +3,10 @@
 
     position: relative;
 
+    > div {
+        transform: translateZ(0);
+    }
+
     > header {
         margin-bottom: 40px;
 
